--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to the Test Site</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam tenetur excepturi voluptatum ea incidunt dignissimos aut veniam, quisquam quos, temporibus, animi ullam provident placeat debitis ab inventore repellendus perferendis!</p>
 </body>
 </html>
